--- a/scss/_largedesk.scss
+++ b/scss/_largedesk.scss
@@ -9,10 +9,10 @@
     .wrapper img{
         top: 2rem;
         left: 11rem;
-        max-height: initial;
+        max-height: 25rem;
     }
     header{
-        height: 55vh;
+        height: 60vh;
         margin-bottom: 2rem;
     }
 
