--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -13,6 +13,7 @@ body{
     padding: 0;
     color: rgb(237, 241, 238);
     font-size: 0.6rem;
+    font-family: 'Roboto', sans-serif;
     z-index: -2;
 }
 .wrapper{  
