--- a/scss/_landskap.scss
+++ b/scss/_landskap.scss
@@ -6,7 +6,8 @@
         font-size: 0.8rem;
     }
     .wrapper img{
-        max-height: 11rem;
+        height: 11rem;
+        width: 11rem;
     }
     header{
         height: 30vh;
@@ -14,7 +15,6 @@
     .border{
         width: 30vw;
     }
-
     .background{
         display: block;
     }
@@ -27,5 +27,4 @@
     section .work{
         padding-top: 1rem;
     }
-
 }
