--- a/scss/_largedesk.scss
+++ b/scss/_largedesk.scss
@@ -9,17 +9,17 @@
     .wrapper img{
         top: 2rem;
         left: 11rem;
-        max-height: 25rem;
+        height: 25rem;
+        width: 25rem;
     }
     header{
         height: 60vh;
         margin-bottom: 2rem;
     }
-
     header nav{
         flex-direction: row;
     }
-    button{
+    a{
         width: 2.5rem;
         height: 2.5rem;
     }
@@ -30,13 +30,13 @@
     .name{
         display: block;
         top: 5rem;
-        right: 20rem;
+        right: 16rem;
         font-size: 2rem;
     }
     .background{
         display: block;
         top: 105vh;
-            }
+    }
     section article{
         margin-top: 2rem;
     }
@@ -44,7 +44,6 @@
         grid-column: 2/ span 3;
         max-width: 16vw;
         max-height: 15rem;
-   
     }
     section .about{
         @include grid7;
