--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -7,8 +7,8 @@
         max-height: 55vh;
     }
     .wrapper img{
-        max-height: 10rem;
-        left: 10%;
+        height: 11rem;
+        width: 11rem;
     }
     header{
         display: block;
@@ -39,8 +39,6 @@
     section .strength{
         min-height: 13rem;
     } 
-
-
     .about{
         padding: 0rem 1rem;
         max-height: 10rem;
