--- a/_base.scss
+++ b/_base.scss
@@ -1,28 +1,32 @@
 body{
 margin: 0;
+padding: 0;
 background-color:whitesmoke;
 
 }
 header{
     position: relative;
-    height: 13rem;
-    width: 100vw;
+    height: 14rem;
+    width: 100%;
 }
 nav{
     position: absolute;
     top: 1rem;
-    right: 1rem;
-    width: 18rem;
-    height: 10rem;
+    right: 0rem;
+    width: 100%;
+    height: 5rem;
+    text-align:right;
+    padding-right: 1rem;
 }
 a{
     color: #265a64;
     font-size: .5rem,;
     padding: 0rem .5rem;
+
 }
 #border1{
 background-color: #265a64;
-width: 13rem;
+width: 8rem;
 height: 100%;
 position: fixed;
 z-index: -1;
@@ -31,45 +35,42 @@ img{
     position: absolute;
     left: 1rem;
     top: 2rem;
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     border-radius: 50%;
 }
 
 section{
     display: flex;
     flex-direction: row;
+    column-gap: 3rem;
+    padding: 0rem 1rem;
+    width: 100%;
 }
 
 #thisisme{
  position: absolute;
- top: 3rem;
- left: 15rem;
- width: 20rem;
+ top: 2rem;
+ left:9rem;
+ width: 13rem;
  flex-direction: column;
 }
-#whathaveidone{
-    width: 20rem;
-    position: absolute;
-    left: 14rem;
-
-}
-#shortinfo{
-    position: absolute;
-    left: 1rem;
-}
 main{
-    height: 80vh;
+    height: 70vh;
 }
 footer{
-
-padding: 2rem 0rem;
+position: absolute;
+bottom: 0;
+padding: 1rem 0rem;
 text-align: center;
 width: 100%;
 
 }
 th{
     padding-right: 1rem;
-    width: 6rem;
+    width: 3rem;
     vertical-align: text-top;
+}
+ul{
+    padding-left: 1rem;
 }
