--- a/_desktop.scss
+++ b/_desktop.scss
@@ -13,21 +13,27 @@
 
     #border1{
     left: 2rem;
+    width: 12rem;
     }
 
     img{
         width: 15rem;
         height: 15rem; 
     }
+    section{
+  
+        column-gap: 5rem;
+        padding: 0rem 1rem 0rem 3rem;
+        width: 100%;
+    }
     
     #thisisme{
-     left: 26rem;
+        left:15vw;;
      width: 20rem;
  
     }
     #whathaveidone{
         width: 30rem;
-        position: absolute;
         left: 23rem;
     
     }
@@ -37,15 +43,9 @@
     main{
         height: 60vh;
     }
-    footer{
-    
-    padding: 2rem 0rem;
-    text-align: center;
-    width: 100%;
-    
-    }
+
     th{
-        padding-right: 1rem;
+
         width: 6rem;
     }
 }
