--- a/_base.scss
+++ b/_base.scss
@@ -26,7 +26,7 @@ a{
 }
 #border1{
 background-color: #265a64;
-width: 9rem;
+width: 8rem;
 height: 100%;
 position: fixed;
 z-index: -1;
@@ -46,6 +46,7 @@ section{
     column-gap: 3rem;
     padding: 0rem 1rem;
     width: 100%;
+    font-size: .8rem;
 }
 
 #thisisme{
