--- a/_desktop.scss
+++ b/_desktop.scss
@@ -25,11 +25,12 @@
         column-gap: 5rem;
         padding: 0rem 1rem 0rem 3rem;
         width: 100%;
+        font-size: 1rem;
     }
     
     #thisisme{
         left:15vw;;
-     width: 20rem;
+     width: 25rem;
  
     }
     #whathaveidone{
